n8n/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n-ingress
  namespace: n8n
spec:
  rules:
  - host: "n8n.local.perelohome.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: n8n-service 
            port:
              number: 80
  tls:
  - hosts:
    - n8n.local.perelohome.com
    secretName: n8n-server-tls-secret
